--- a/index.css
+++ b/index.css
@@ -3,6 +3,15 @@
     font-family: 'Rammetto One', cursive;
 }
 
+a {
+    color: inherit;
+}
+/*visited link*/
+a:link{
+    text-decoration: none;
+    color: inherit;
+}
+
 html, body {
     height: 100%;
     margin: 0;
@@ -19,10 +28,9 @@ header {
     justify-content: center;
     align-items: center;
     height : 100%;
-
 }
 
-header h1{
+header button{
     color:black;
     background-color: rgba(240, 248, 255, 0.459);
     background-clip: border-box;
@@ -34,11 +42,10 @@ header h1{
     box-shadow: 10px 5px 5px rgba(240, 248, 255, 0.459);
     text-shadow: pink;
     animation: enter 2s ease-in-out;
-
-
+    font-size: 40px;
 }
 
-header h1:hover{
+header button:hover{
     background-color: rgba(50, 50, 50, 0.76);
     color: white;
     border-left: violet solid 10px;
@@ -47,15 +54,14 @@ header h1:hover{
     border-top: firebrick dotted 1px;
     padding: 100px;
     font-size: 4cm;
-
 }
 
 /** ABOUT */
 #about article{
     width: 100%;
     padding: 15px;
-    background-color: gray;
-    color: aliceblue;
+    margin: 0;
+    color: black;
 }
 
 #about h3{
@@ -66,6 +72,7 @@ header h1:hover{
 
 #about p b{
     font-weight: 900;
+    margin: 0;
 }
 
 #about hr{
@@ -73,14 +80,36 @@ header h1:hover{
 }
 
 section {
-    min-height: 100%;
     display: flex;
     flex-direction: inline;
     flex-wrap: wrap;
     align-items: center;
     justify-content: flex-start;
 }
-section a {
+
+/** MAIN PAGE */
+#main-page{
+    padding: 50px;
+}
+
+#main-page article {
+    color:white;
+    background-position: center;
+    background-size: cover;
+    padding:10px;
+    margin: 10px;
+    width: 100%;
+    height: 200px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+#main-page a {
     width: 23%;
     margin: 5%;
     margin-top: 5px;
@@ -88,32 +117,66 @@ section a {
     justify-content: space-between;
 }
 
-/** MAIN PAGE */
-#main-page article {
-    color:white;
-    background-image: url("img/manuel.jpg");
-    background-position: center;
-    background-repeat: repeat;
-    background-size: cover;
-    padding:25px 10px;
-    width: 100%;
-    height: 150px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    text-align: center;
-    
-}
+#article-1{ background-image: url("./img/hotelvilleLB.png")}
+#article-2{ background-image: url("./img/royal.jpg")}
+#article-3{ background-image: url("./img/tennis.jpeg")}
+#article-4{ background-image: url("./img/manuel.jpg")}
+#article-5{ background-image: url("./img/marais.jpg")}
+#article-6{ background-image: url("./img/biblio.jpg")}
 
-footer {
-    background-color: aqua;
-    height: auto;
+/** CV */
+#CV{
+    background-color: white;
+    height: cover;
+    width: cover;
     display: flex;
+    flex-wrap : nowrap;
     flex-direction: row;
     justify-content: space-between;
     text-align: center;
+    align-items: center;
+    align-content: center;
+    padding: 20px;
+}
+
+#CV article{
+    color:white;
+    background-position: center;
+    background-size: cover;
+    padding:10px;
+    margin: 10px;
+    width: 200px;
+    height: 200px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
+    align-items: center;
+}
+
+#article-7{ background-image: url("./img/chicago.jpg");}
+#article-8{ background-image: url("./img/alex.jpg")}
+#article-9{ background-image: url("./img/Camille.png")}
+#article-10{ background-image: url("./img/antoine.JPG")}
+#article-11{ background-image: url("./img/Ophélie.jpg")}
+
+/*visited link*/
+a:visited{
+    text-decoration: none;
+}
+
+footer {
+    background-color: #86898C;
+    color : white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: medium;
 }
 
 /** RESPONSIVE **/
@@ -134,9 +197,7 @@ footer {
 @media only screen and (min-width: 600px) and (max-width: 900px){
     section a{
         width: 37%;
-       
     }
-
 }
 
 /** ANIMATIONS **/
