--- a/styles/accueil.css
+++ b/styles/accueil.css
@@ -3,6 +3,16 @@ html, body {
     margin: 0;
 }
 
+/*visited link*/
+a:link{
+    text-decoration: none;
+    color: inherit;
+}
+
+a {
+    color: inherit;
+}
+
 header { 
     background-image: url("../img/hotelvilleLB.png");
     background-repeat: no-repeat;
@@ -25,4 +35,29 @@ section {
 body{
     color: white;
     text-decoration: none;
+}
+
+.home{
+    color:black;
+    background-color: rgba(240, 248, 255, 0.459);
+    background-clip: border-box;
+    border-bottom: firebrick dotted 1px;
+    border-top: firebrick dotted 1px;
+    padding: 10px;
+    cursor: pointer;
+    transition: all 0.3s cubic-bezier(.78, .07, .1, .78);
+    box-shadow: 10px 5px 5px rgba(240, 248, 255, 0.459);
+    animation: enter 2s ease-in-out;
+    font-size: 40px;
+}
+
+.home:hover{
+    background-color: rgba(50, 50, 50, 0.76);
+    color: white;
+    border-left: violet solid 10px;
+    border-right: violet solid 10px;
+    border-bottom: firebrick dotted 1px;
+    border-top: firebrick dotted 1px;
+    padding: 100px;
+    font-size: 4cm;
 }
