--- a/index.css
+++ b/index.css
@@ -61,17 +61,28 @@ header {
     padding: 15px;
     margin: 0;
     color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-#about h3{
+#about h2{
     text-transform: uppercase;
     text-decoration: underline;
-    color: red;
+    color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#about p{
+    margin: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
+    text-align: justify;
+    font-size: 17px;
 }
 
 #about p b{
-    font-weight: 900;
-    margin: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 17px;
+    font-weight: 400px;
 }
 
 #about hr{
