--- a/styles/accueil.css
+++ b/styles/accueil.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Rammetto+One');
+* {
+    font-family: 'Rammetto One', cursive;
+}
+
 html, body {
     height: 100%;
     margin: 0;
@@ -14,7 +19,7 @@ a {
 }
 
 header { 
-    background-image: url("../img/hotelvilleLB.png");
+    background-image: url("../img/marais.jpg");
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
@@ -60,4 +65,78 @@ body{
     border-top: firebrick dotted 1px;
     padding: 100px;
     font-size: 4cm;
+}
+
+/** ABOUT */
+#about{
+    color: black;
+}
+#about h1{
+    text-transform: uppercase;
+    text-decoration: underline;
+    color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size : 30px;
+    text-align: center;
+}
+
+#about h2{
+    text-transform: uppercase;
+    color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+}
+
+#about p{
+
+    margin: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
+    text-align: justify;
+    font-size: 17px;
+}
+
+#about p b{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 17px;
+    font-weight: 400px;
+}
+
+/** PALUDIER */
+#paludier{
+    display: flex;
+    justify-content: row;
+    align-content: center;
+    align-items: center;
+}
+
+#imgpaludier{
+    width: 25%;
+    height: 25%;
+    margin-right: 30px;
+}
+
+/** RECOLTE*/
+#recolte{
+    display: flex;
+    justify-content: row;
+    align-content: center;
+    align-items: center;
+}
+
+#marais{
+    width: 25%;
+    height: 25%;
+    margin-right: 30px;
+}
+
+footer {
+    background-color: #86898C;
+    color : white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: medium;
 }
