--- a/index.css
+++ b/index.css
@@ -85,7 +85,7 @@ header {
 #about p b{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 17px;
-    font-weight: 650;
+    font-weight: bold;
 }
 
 #about hr{
