--- a/styles/accueil.css
+++ b/styles/accueil.css
@@ -102,7 +102,7 @@ body{
 #about p b{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 17px;
-    font-weight: 650;
+    font-weight: bold;
 }
 
 /** PALUDIER */
